{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 187,
  "lineage": "ea18926c-b8cc-6dad-7a1a-26ce81279648",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "wordpressAlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:976817258596:loadbalancer/app/wordpressAlb/1f09a2fdd1642045",
            "arn_suffix": "app/wordpressAlb/1f09a2fdd1642045",
            "desync_mitigation_mode": "defensive",
            "dns_name": "wordpressAlb-357834686.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:976817258596:loadbalancer/app/wordpressAlb/1f09a2fdd1642045",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpressAlb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-046a140f2178145ac"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0361f3c320c02b4eb"
              },
              {
                "subnet_id": "subnet-0a384e794ae0d12da"
              }
            ],
            "subnets": [
              "subnet-0361f3c320c02b4eb",
              "subnet-0a384e794ae0d12da"
            ],
            "tags": {
              "Name": "wordpressAlb"
            },
            "tags_all": {
              "Name": "wordpressAlb"
            },
            "vpc_id": "vpc-0481539b4dccade9c",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.albSG",
            "aws_subnet.PublicALBNAT1Sub",
            "aws_subnet.PublicALBNAT2Sub",
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "wordpressALBListerner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:976817258596:listener/app/wordpressAlb/1f09a2fdd1642045/f7fbf091a7fffc55",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:976817258596:targetgroup/wordpressALBtargetgroup/f03f6585e7400e9b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:976817258596:listener/app/wordpressAlb/1f09a2fdd1642045/f7fbf091a7fffc55",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:976817258596:loadbalancer/app/wordpressAlb/1f09a2fdd1642045",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.wordpressAlb",
            "aws_alb_target_group.wordpressALBtargetgroup",
            "aws_security_group.albSG",
            "aws_subnet.PublicALBNAT1Sub",
            "aws_subnet.PublicALBNAT2Sub",
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "wordpressALBtargetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:976817258596:targetgroup/wordpressALBtargetgroup/f03f6585e7400e9b",
            "arn_suffix": "targetgroup/wordpressALBtargetgroup/f03f6585e7400e9b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:976817258596:targetgroup/wordpressALBtargetgroup/f03f6585e7400e9b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpressALBtargetgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0481539b4dccade9c"
          },
          "dependencies": [
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c2c6fd40899c9263",
            "domain": "vpc",
            "id": "eipalloc-0c2c6fd40899c9263",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-63-33-150-100.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.33.150.100",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT1"
            },
            "tags_all": {
              "Name": "NAT1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d5bd3d51e0869d8",
            "domain": "vpc",
            "id": "eipalloc-04d5bd3d51e0869d8",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-248-23-227.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.248.23.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT2"
            },
            "tags_all": {
              "Name": "NAT2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wordpressIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:976817258596:internet-gateway/igw-035d698aefbaf3bb5",
            "id": "igw-035d698aefbaf3bb5",
            "owner_id": "976817258596",
            "tags": {
              "Name": "wordpressIGW"
            },
            "tags_all": {
              "Name": "wordpressIGW"
            },
            "vpc_id": "vpc-0481539b4dccade9c"
          },
          "dependencies": [
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wordpressNAT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c2c6fd40899c9263",
            "connectivity_type": "public",
            "id": "nat-0038ca61025ae151f",
            "network_interface_id": "eni-087eee35aa22c1480",
            "private_ip": "10.0.2.203",
            "public_ip": "63.33.150.100",
            "subnet_id": "subnet-0361f3c320c02b4eb",
            "tags": {
              "Name": "wordpressNAT1"
            },
            "tags_all": {
              "Name": "wordpressNAT1"
            }
          },
          "dependencies": [
            "aws_eip.NAT1",
            "aws_subnet.PublicALBNAT1Sub",
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wordpressNAT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d5bd3d51e0869d8",
            "connectivity_type": "public",
            "id": "nat-03fb15ee005d7587d",
            "network_interface_id": "eni-00eea4f41822b7719",
            "private_ip": "10.0.3.136",
            "public_ip": "34.248.23.227",
            "subnet_id": "subnet-0a384e794ae0d12da",
            "tags": {
              "Name": "wordpressNAT2"
            },
            "tags_all": {
              "Name": "wordpressNAT2"
            }
          },
          "dependencies": [
            "aws_eip.NAT2",
            "aws_subnet.PublicALBNAT2Sub",
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wordpressPrivateRT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:976817258596:route-table/rtb-06d10f5c81d981603",
            "id": "rtb-06d10f5c81d981603",
            "owner_id": "976817258596",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0038ca61025ae151f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpressPublicRT1"
            },
            "tags_all": {
              "Name": "wordpressPublicRT1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0481539b4dccade9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT1",
            "aws_nat_gateway.wordpressNAT1",
            "aws_subnet.PublicALBNAT1Sub",
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wordpressPrivateRT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:976817258596:route-table/rtb-07f7862d418a49419",
            "id": "rtb-07f7862d418a49419",
            "owner_id": "976817258596",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03fb15ee005d7587d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpressPublicRT2"
            },
            "tags_all": {
              "Name": "wordpressPublicRT2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0481539b4dccade9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT2",
            "aws_nat_gateway.wordpressNAT2",
            "aws_subnet.PublicALBNAT2Sub",
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wordpressPublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:976817258596:route-table/rtb-07815d30a22113934",
            "id": "rtb-07815d30a22113934",
            "owner_id": "976817258596",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035d698aefbaf3bb5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpressPublicRT"
            },
            "tags_all": {
              "Name": "wordpressPublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0481539b4dccade9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wordpressIGW",
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpressPridb2RTA2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c24debc0a85c8da1",
            "route_table_id": "rtb-06d10f5c81d981603",
            "subnet_id": "subnet-0b4a693bb647a2b99"
          },
          "dependencies": [
            "aws_eip.NAT1",
            "aws_nat_gateway.wordpressNAT1",
            "aws_route_table.wordpressPrivateRT1",
            "aws_subnet.PrivateDB1Sub",
            "aws_subnet.PublicALBNAT1Sub",
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpressPridb2RTA2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffa86af146d444d1",
            "route_table_id": "rtb-07f7862d418a49419",
            "subnet_id": "subnet-0db1330ffbdf5c914"
          },
          "dependencies": [
            "aws_eip.NAT2",
            "aws_nat_gateway.wordpressNAT2",
            "aws_route_table.wordpressPrivateRT2",
            "aws_subnet.PrivateDB2Sub",
            "aws_subnet.PublicALBNAT2Sub",
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpressPriweb1RTA2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fcc2a20f7b76c6f",
            "route_table_id": "rtb-06d10f5c81d981603",
            "subnet_id": "subnet-05bbd58fcfd7f37a6"
          },
          "dependencies": [
            "aws_eip.NAT1",
            "aws_nat_gateway.wordpressNAT1",
            "aws_route_table.wordpressPrivateRT1",
            "aws_subnet.PrivateWeb1Sub",
            "aws_subnet.PublicALBNAT1Sub",
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpressPriweb1RTA2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081b067abeb20c75a",
            "route_table_id": "rtb-07f7862d418a49419",
            "subnet_id": "subnet-0cc8910f583a9b0dd"
          },
          "dependencies": [
            "aws_eip.NAT2",
            "aws_nat_gateway.wordpressNAT2",
            "aws_route_table.wordpressPrivateRT2",
            "aws_subnet.PrivateWeb2Sub",
            "aws_subnet.PublicALBNAT2Sub",
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpressPub1RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0482393667c36a79f",
            "route_table_id": "rtb-07815d30a22113934",
            "subnet_id": "subnet-0361f3c320c02b4eb"
          },
          "dependencies": [
            "aws_internet_gateway.wordpressIGW",
            "aws_route_table.wordpressPublicRT",
            "aws_subnet.PublicALBNAT1Sub",
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpressPub2RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04229757a9ae7c24d",
            "route_table_id": "rtb-07815d30a22113934",
            "subnet_id": "subnet-0a384e794ae0d12da"
          },
          "dependencies": [
            "aws_internet_gateway.wordpressIGW",
            "aws_route_table.wordpressPublicRT",
            "aws_subnet.PublicALBNAT2Sub",
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WPDBsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "Allow traffic from webapp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0337b7899809dcdca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05493fd3efd4f1e7d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": null,
            "owner_id": null,
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": null,
            "timeouts": null,
            "vpc_id": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.WPsg",
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WPsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:976817258596:security-group/sg-05493fd3efd4f1e7d",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05493fd3efd4f1e7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WPsg",
            "name_prefix": "",
            "owner_id": "976817258596",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0481539b4dccade9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "albSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:976817258596:security-group/sg-046a140f2178145ac",
            "description": "This  is the SG for the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046a140f2178145ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress-alb-sg",
            "name_prefix": "",
            "owner_id": "976817258596",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0481539b4dccade9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateDB1Sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:976817258596:subnet/subnet-0b4a693bb647a2b99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4a693bb647a2b99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "976817258596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateDB1Sub"
            },
            "tags_all": {
              "Name": "PrivateDB1Sub"
            },
            "vpc_id": "vpc-0481539b4dccade9c"
          },
          "dependencies": [
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateDB2Sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:976817258596:subnet/subnet-0db1330ffbdf5c914",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db1330ffbdf5c914",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "976817258596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateDB2Sub"
            },
            "tags_all": {
              "Name": "PrivateDB2Sub"
            },
            "vpc_id": "vpc-0481539b4dccade9c"
          },
          "dependencies": [
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateWeb1Sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:976817258596:subnet/subnet-05bbd58fcfd7f37a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bbd58fcfd7f37a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "976817258596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateWeb1Sub"
            },
            "tags_all": {
              "Name": "PrivateWeb1Sub"
            },
            "vpc_id": "vpc-0481539b4dccade9c"
          },
          "dependencies": [
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateWeb2Sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:976817258596:subnet/subnet-0cc8910f583a9b0dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc8910f583a9b0dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "976817258596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateWeb2Sub"
            },
            "tags_all": {
              "Name": "PrivateWeb2Sub"
            },
            "vpc_id": "vpc-0481539b4dccade9c"
          },
          "dependencies": [
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicALBNAT1Sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:976817258596:subnet/subnet-0361f3c320c02b4eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0361f3c320c02b4eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "976817258596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicALBNAT1Sub"
            },
            "tags_all": {
              "Name": "PublicALBNAT1Sub"
            },
            "vpc_id": "vpc-0481539b4dccade9c"
          },
          "dependencies": [
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicALBNAT2Sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:976817258596:subnet/subnet-0a384e794ae0d12da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a384e794ae0d12da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "976817258596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicALBNAT2Sub"
            },
            "tags_all": {
              "Name": "PublicALBNAT2Sub"
            },
            "vpc_id": "vpc-0481539b4dccade9c"
          },
          "dependencies": [
            "aws_vpc.wordpressapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wordpressapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:976817258596:vpc/vpc-0481539b4dccade9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c9ba665a3c49c8d",
            "default_route_table_id": "rtb-07871a26d4d30abec",
            "default_security_group_id": "sg-0e2d053bd1e5a7d66",
            "dhcp_options_id": "dopt-0ed6f54b8977d6e1f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0481539b4dccade9c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07871a26d4d30abec",
            "owner_id": "976817258596",
            "tags": {
              "Name": "wordpressapp"
            },
            "tags_all": {
              "Name": "wordpressapp"
            }
          }
        }
      ]
    }
  ]
}